remove glow,hwm14 autobuild

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
       timeout-minutes: 8
       run: |
         cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build --install-prefix=${HOME}/gemlibs
-        cmake --build $GITHUB_WORKSPACE/gemext/build --target msis mumps
+        cmake --build $GITHUB_WORKSPACE/gemext/build --target glow msis mumps
         cmake --install $GITHUB_WORKSPACE/gemext/build
 
     - name: Configure multi
@@ -99,7 +99,7 @@ jobs:
       timeout-minutes: 8
       run: |
         cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build --install-prefix=${HOME}/gemlibs
-        cmake --build $GITHUB_WORKSPACE/gemext/build --target mumps msis
+        cmake --build $GITHUB_WORKSPACE/gemext/build --target glow mumps msis
         cmake --install $GITHUB_WORKSPACE/gemext/build
 
     - name: Configure release
@@ -138,7 +138,7 @@ jobs:
       timeout-minutes: 8
       run: |
         cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build --install-prefix=${HOME}/gemlibs
-        cmake --build $GITHUB_WORKSPACE/gemext/build --target mumps msis hwm14
+        cmake --build $GITHUB_WORKSPACE/gemext/build --target glow mumps msis hwm14
         cmake --install $GITHUB_WORKSPACE/gemext/build
 
     - name: Configure release
@@ -179,7 +179,7 @@ jobs:
       timeout-minutes: 8
       run: |
         cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build --install-prefix=${HOME}/gemlibs
-        cmake --build $GITHUB_WORKSPACE/gemext/build --target mumps msis
+        cmake --build $GITHUB_WORKSPACE/gemext/build --target glow mumps msis
         cmake --install $GITHUB_WORKSPACE/gemext/build
 
     - name: Configure multi
