for windows shared libs, tests require CMake>=3.22

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -145,8 +145,12 @@ PASS_REGULAR_EXPRESSION "EOF: gemini.bin"
 FIXTURES_SETUP gemini_exe_fxt
 FIXTURES_REQUIRED "mumps_fxt;hwloc_fxt"
 LABELS unit
-ENVIRONMENT $<$<BOOL:${test_dll_path}>:"PATH=${test_dll_path}">
 )
+if(WIN32 AND CMAKE_VERSION VERSION_GREATER_EQUAL 3.22)
+  set_tests_properties(unit:gemini_exe_ok PROPERTIES
+  ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:${test_dll_path}"
+  )
+endif()
 
 install(TARGETS gemini3d gemini.bin
 EXPORT ${PROJECT_NAME}-targets
