--- a/src/numerical/interpolation/CMakeLists.txt
+++ b/src/numerical/interpolation/CMakeLists.txt
@@ -30,14 +30,13 @@ $<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
 )
 
 add_test(NAME unit:interp2
-COMMAND $<TARGET_FILE:test_interp2> ${_testfile_interp2in} ${_testfile_interp2}
+COMMAND test_interp2 ${_testfile_interp2in} ${_testfile_interp2}
 WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
 )
 set_tests_properties(unit:interp2 PROPERTIES
 TIMEOUT 15
 LABELS unit
 FIXTURES_SETUP gemini_interp2_fxt
-ENVIRONMENT $<$<BOOL:${test_dll_path}>:"PATH=${test_dll_path}">
 )
 
 # --- 3D
@@ -48,7 +47,7 @@ $<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
 )
 
 add_test(NAME unit:interp3
-COMMAND $<TARGET_FILE:test_interp3> ${_testfile_interp3in} ${_testfile_interp3}
+COMMAND test_interp3 ${_testfile_interp3in} ${_testfile_interp3}
 WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
 )
 set_tests_properties(unit:interp3 PROPERTIES
@@ -56,8 +55,13 @@ TIMEOUT 60  # need 60 for slow CPU
 LABELS unit
 RESOURCE_LOCK cpu_ram
 FIXTURES_SETUP gemini_interp3_fxt
-ENVIRONMENT $<$<BOOL:${test_dll_path}>:"PATH=${test_dll_path}">
 )
+
+if(WIN32 AND CMAKE_VERSION VERSION_GREATER_EQUAL 3.22)
+  set_tests_properties(unit:interp2 unit:interp3 PROPERTIES
+  ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:${test_dll_path}"
+  )
+endif()
 
 
 
