--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -1,13 +1,13 @@
 add_library(neutral OBJECT neutral.f90 atmos.f90 wind.f90)
 target_compile_options(neutral PRIVATE ${gfortran_opts})
 target_link_libraries(neutral PRIVATE config const reader grid meshobj interp mpimod
-hwm_ifc
 timeutils
 inputdata neutraldata neutraldata3D
 neutraldata2D neutraldata2Dcart neutraldata2Daxisymm
 h5fortran::h5fortran
 MPI::MPI_Fortran
 msis::msis_ifc
+hwm14::hwm_ifc
 ffilesystem::filesystem ${lib_filesystem}
 )
 
@@ -25,9 +25,9 @@ endforeach()
 target_include_directories(test_proj PRIVATE ${PROJECT_BINARY_DIR}/include)
 target_link_libraries(test_proj PRIVATE config const reader inputdata
 timeutils mpimod const
-hwm_ifc
 MPI::MPI_Fortran
 msis::msis_ifc
+hwm14::hwm_ifc
 ffilesystem::filesystem ${lib_filesystem}
 )
 if(CMAKE_Fortran_COMPILER_ID MATCHES "^Intel")
