--- a/.github/workflows/ci_oldest.yml
+++ b/.github/workflows/ci_oldest.yml
@@ -65,7 +65,7 @@ jobs:
       timeout-minutes: 8
       run: |
         cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build -DCMAKE_INSTALL_PREFIX=${HOME}/gemlibs
-        cmake --build $GITHUB_WORKSPACE/gemext/build --target glow msis mumps
+        cmake --build $GITHUB_WORKSPACE/gemext/build --target ffilesystem glow msis mumps
         cmake --install $GITHUB_WORKSPACE/gemext/build
 
     - name: Configure release
