--- a/.github/workflows/ci_oldest.yml
+++ b/.github/workflows/ci_oldest.yml
@@ -27,6 +27,11 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
+    strategy:
+      matrix:
+        msis2: [true, false]
+        hwm14: [true, false]
+
     env:
       CC: gcc-8
       CXX: g++-8
@@ -64,12 +69,12 @@ jobs:
     - name: Install numeric libraries
       timeout-minutes: 8
       run: |
-        cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build -DCMAKE_INSTALL_PREFIX=${HOME}/gemlibs
-        cmake --build $GITHUB_WORKSPACE/gemext/build --target ffilesystem glow msis mumps
+        cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build -Dmsis2:BOOL=${{ matrix.msis2 }} -DCMAKE_INSTALL_PREFIX=${HOME}/gemlibs
+        cmake --build $GITHUB_WORKSPACE/gemext/build --target ffilesystem glow hwm14 msis mumps
         cmake --install $GITHUB_WORKSPACE/gemext/build
 
     - name: Configure release
-      run: cmake -B build -DCMAKE_PREFIX_PATH:PATH=${HOME}/gemlibs
+      run: cmake -B build -DCMAKE_PREFIX_PATH:PATH=${HOME}/gemlibs -Dmsis2:BOOL=${{ matrix.msis2 }} -Dhwm14:BOOL=${{ matrix.hwm14 }}
 
     - name: Release build
       run: cmake --build build
