--- a/.github/workflows/intel-oneapi.yml
+++ b/.github/workflows/intel-oneapi.yml
@@ -5,10 +5,16 @@ env:
   CTEST_PARALLEL_LEVEL: 2
   CC: icx
   FC: ifort
+  LINUX_BASEKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/18487/l_BaseKit_p_2022.1.2.146_offline.sh
+  LINUX_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/18479/l_HPCKit_p_2022.1.2.117_offline.sh
+  LINUX_CPP_COMPONENTS: intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic
+  LINUX_FORTRAN_COMPONENTS: intel-oneapi-compiler-fortran
+# https://github.com/oneapi-src/oneapi-ci/blob/master/.github/workflows/build_all.yml
 
 on:
   push:
     paths:
+      - "**.cpp"
       - "**.f90"
       - "**.F90"
       - "**.cmake"
@@ -25,34 +31,40 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
 
-    strategy:
-      matrix:
-        msis2: [true, false]
-        hwm14: [true, false]
+    # strategy:
+    #   matrix:
+    #     msis2: [true, false]
+    #     hwm14: [true, false]
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
+
+    - name: cache install oneAPI
+      id: cache-install
+      uses: actions/cache@v2
       with:
-        python-version: '3.8'
+        path: |
+          /opt/intel/oneapi
+        key: install-${{ env.LINUX_HPCKIT_URL }}-${{ env.LINUX_CPP_COMPONENTS }}-${{ env.LINUX_FORTRAN_COMPONENTS }}-compiler
 
-    - name: Intel Apt repository
-      timeout-minutes: 1
+    - name: non-cache install oneAPI
+      if: steps.cache-install.outputs.cache-hit != 'true'
+      timeout-minutes: 5
       run: |
-        wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
-        sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
-        rm GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
-        echo "deb https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
-        sudo apt-get update
+        .github/workflows/oneapi_setup_apt_repo_linux.sh
+        sudo apt install intel-oneapi-compiler-fortran intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic intel-oneapi-mpi intel-oneapi-mpi-devel intel-oneapi-mkl intel-oneapi-mkl-devel
 
-    - name: Install Intel oneAPI
-      timeout-minutes: 10
-      run: sudo apt-get install intel-oneapi-compiler-fortran intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic intel-oneapi-mpi intel-oneapi-mpi-devel intel-oneapi-mkl intel-oneapi-mkl-devel ninja-build
+    - name: install ninja
+      run: sudo apt install ninja-build
 
-    - name: Setup Intel oneAPI environment
+    - name: oneAPI env vars
       run: |
         source /opt/intel/oneapi/setvars.sh
         printenv >> $GITHUB_ENV
+
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
 
 # HDF5 library doesn't install correctly with Ninja Multi-config
 # CMake Error at fortran/src/cmake_install.cmake:61 (file):
@@ -68,12 +80,12 @@ jobs:
     - name: Install numeric libraries
       timeout-minutes: 8
       run: |
-        cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build -Dmsis2:BOOL=${{ matrix.msis2 }} --install-prefix=${HOME}/gemlibs
-        cmake --build $GITHUB_WORKSPACE/gemext/build --target ffilesystem glow msis mumps
+        cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build  --install-prefix=${HOME}/gemlibs
+        cmake --build $GITHUB_WORKSPACE/gemext/build --target ffilesystem glow hwm14 msis mumps
         cmake --install $GITHUB_WORKSPACE/gemext/build
 
     - name: CMake Configure Ninja Multi-config
-      run: cmake --preset multi -DCMAKE_PREFIX_PATH:PATH=${HOME}/gemlibs -Dmsis2:BOOL=${{ matrix.msis2 }} -Dhwm14:BOOL=${{ matrix.hwm14 }} || cmake --preset multi -DCMAKE_PREFIX_PATH:PATH=${HOME}/gemlibs --debug-find
+      run: cmake --preset multi -DCMAKE_PREFIX_PATH:PATH=${HOME}/gemlibs || cmake --preset multi -DCMAKE_PREFIX_PATH:PATH=${HOME}/gemlibs --debug-find
 
     - name: DEBUG build
       run: cmake --build --preset debug
@@ -88,3 +100,7 @@ jobs:
       run: ctest --preset release -L unit
     - name: RELEASE test core
       run: ctest --preset release -LE unit -E 3d
+
+    - name: exclude unused files from cache
+      if: steps.cache-install.outputs.cache-hit != 'true'
+      run: .github/workflows/oneapi_cache_exclude_linux.sh
