ci: test name wildcard for w/wo hwm14

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
       run: ctest --preset debug -L unit
 
     - name: Debug core test
-      run: ctest --preset debug -LE unit -R "(2dew_fang|2dns_fang)"
+      run: ctest --preset debug -LE unit -R "(2dew_.*fang|2dns_.*fang)"
 
 
     - name: Release build
