--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,11 +46,14 @@ jobs:
       run: |
         sudo apt update -yq
         sudo $(cmake -P scripts/requirements.cmake)
+        sudo apt install libscalapack-mpi-dev
 
     - name: Install packages (MacOS)
       if: matrix.image.os == 'macos-latest'
       timeout-minutes: 15
-      run: $(cmake -P scripts/requirements.cmake)
+      run: |
+        $(cmake -P scripts/requirements.cmake)
+        brew install scalapack
 
     - name: Checkout Gemini3D-External
       uses: actions/checkout@v2
@@ -58,10 +61,10 @@ jobs:
         repository: gemini3d/external
         path: gemext
 
-    - name: Install numeric libraries
+    - name: Install model libraries
       timeout-minutes: 15
       run: |
-        cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build -Dmsis2:BOOL=${{ matrix.msis2 }} --install-prefix=${HOME}/gemlibs
+        cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build -Dfind:BOOL=true -Dmsis2:BOOL=${{ matrix.msis2 }} --install-prefix=${HOME}/gemlibs
         cmake --build $GITHUB_WORKSPACE/gemext/build --target ffilesystem glow hwm14 msis mumps
         cmake --install $GITHUB_WORKSPACE/gemext/build
 
