--- a/.github/workflows/ci_oldest.yml
+++ b/.github/workflows/ci_oldest.yml
@@ -56,6 +56,7 @@ jobs:
       run: |
         sudo apt update -yq
         sudo $(cmake -P scripts/requirements.cmake)
+        sudo apt install libscalapack-mpi-dev
 
     - name: install Ninja + GCC 8 (ABI compatible with GCC 9 system libs)
       run: sudo apt install ninja-build gcc-8 g++-8 gfortran-8
@@ -69,7 +70,7 @@ jobs:
     - name: Install numeric libraries
       timeout-minutes: 8
       run: |
-        cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build -Dmsis2:BOOL=${{ matrix.msis2 }} -DCMAKE_INSTALL_PREFIX=${HOME}/gemlibs
+        cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build -Dfind:BOOL=true -Dmsis2:BOOL=${{ matrix.msis2 }} -DCMAKE_INSTALL_PREFIX=${HOME}/gemlibs
         cmake --build $GITHUB_WORKSPACE/gemext/build --target ffilesystem glow hwm14 msis mumps
         cmake --install $GITHUB_WORKSPACE/gemext/build
 
