--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -38,6 +38,7 @@ jobs:
           mingw-w64-x86_64-ninja
           mingw-w64-x86_64-gcc-fortran
           mingw-w64-x86_64-hdf5
+          mingw-w64-x86_64-lapack
 
     - uses: actions/checkout@v2
 
@@ -50,7 +51,7 @@ jobs:
     - name: Install numeric libraries
       timeout-minutes: 8
       run: |
-        cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build -Dusempi:BOOL=no --install-prefix=${HOME}/gemlibs
+        cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build -Dfind:BOOL=true -Dusempi:BOOL=no --install-prefix=${HOME}/gemlibs
         cmake --build $GITHUB_WORKSPACE/gemext/build --target ffilesystem glow msis mumps
         cmake --install $GITHUB_WORKSPACE/gemext/build
 
