fixup: manual merge

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -88,7 +88,6 @@ inputdata precipdata efielddata
 #neutraldata neutraldata3D_mpi neutraldata2D neutraldata2Daxisymm neutraldata2Dcart
 meshobj meshobj_cart meshobj_dipole spherical newton geomagnetic
 multifluid
-neutral
 PDEparabolic gbsv
 precipBCs reader sanity_check errors sources timeutils
 exe_frontend
@@ -111,7 +110,7 @@ diffusion fang interp
 ionization
 ionization_mpi
 inputdata precipdata efielddata
-neutraldata neutraldata3D_mpi neutraldata2D neutraldata2Daxisymm neutraldata2Dcart
+# neutraldata neutraldata3D_mpi neutraldata2D neutraldata2Daxisymm neutraldata2Dcart
 meshobj meshobj_cart meshobj_dipole spherical newton geomagnetic
 multifluid
 multifluid_mpi
