--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -28,7 +28,7 @@ ffilesystem::filesystem ${lib_filesystem}
 add_executable(test_proj test_proj.f90)
 
 foreach(t newton spherical geomagnetic meshobj meshobj_cart meshobj_dipole grid autogrid neutral interp
-neutraldata neutraldata3D neutraldata2D neutraldata2Dcart neutraldata2Daxisymm
+neutraldata neutraldata3D_mpi neutraldata2D neutraldata2Daxisymm neutraldata2Dcart
 )
 
   target_sources(test_proj PRIVATE $<TARGET_OBJECTS:${t}>)
