some platforms need explicit neutral link

--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -15,7 +15,8 @@ add_library(neutral_perturbations OBJECT neutral_perturbations.f90)
 target_compile_options(neutral_perturbations PRIVATE ${gfortran_opts})
 target_link_libraries(neutral_perturbations PRIVATE config const reader grid meshobj interp mpimod
 timeutils
-inputdata neutraldata neutraldata3D_mpi
+inputdata
+neutral neutraldata neutraldata3D_mpi
 neutraldata2D neutraldata2Dcart neutraldata2Daxisymm
 h5fortran::h5fortran
 MPI::MPI_Fortran
