--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -52,7 +52,7 @@ jobs:
       timeout-minutes: 8
       run: |
         cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build -Dfind:BOOL=true -Dusempi:BOOL=no --install-prefix=${HOME}/gemlibs
-        cmake --build $GITHUB_WORKSPACE/gemext/build --target ffilesystem glow msis mumps
+        cmake --build $GITHUB_WORKSPACE/gemext/build --target ffilesystem glow msis mumps iniparser
         cmake --install $GITHUB_WORKSPACE/gemext/build
 
     - name: Configure multi
