--- a/src/ionization/CMakeLists.txt
+++ b/src/ionization/CMakeLists.txt
@@ -16,12 +16,7 @@ set_tests_properties(unit:fangIonize PROPERTIES
 TIMEOUT 10
 LABELS unit
 )
-if(WIN32 AND CMAKE_VERSION VERSION_GREATER_EQUAL 3.22)
-  set_tests_properties(unit:fangIonize PROPERTIES
-  ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:${test_dll_path}"
-  )
-endif()
-
+dll_test_path("h5fortran::h5fortran;ZLIB::ZLIB;LAPACK::LAPACK" unit:fangIonize)
 
 if(python)
   add_test(NAME unit:fangIonize:python
